[package]
name = "parquet2csv"
description = "Convert from CSV to Parquet and back again!"
license = "Apache-2.0"
version = "2025.3.23"
edition = "2024"
homepage = "https://4n6ir.com"
repository = "https://github.com/jblukach/parquet2csv"
readme = "README.md"

[dependencies]
polars = { version = "0.46.0", features = ["parquet"] }

[profile.release]
strip = true